Add artifactes to nexus server